# focus-lock

./: .gitignore  AGENTS.md  CMakeLists.txt  PRD.md  PRODUCT.md  README.md  sdkconfig  sdkconfig.defaults  test.c
components/u8g2/: .component_hash  .gitignore  CHECKSUMS.json  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
components/u8g2/include/: esp32_hw_i2c.h  esp32_hw_spi.h  mui.h  mui_u8g2.h  u8g2.h  u8x8.h
components/u8g2/src/port/: esp32_hw_i2c.c  esp32_hw_i2c.h  esp32_hw_spi.c  esp32_hw_spi.h
docs/superpowers/plans/: 2026-06-10-focuslock.md  2026-06-10-usb-hid-lock.md  2026-06-10-webui.md  2026-06-13-hardware-integration.md  2026-06-14-rtc-service.md  2026-06-15-oled-rtc-display.md
docs/superpowers/specs/: 2026-06-10-focuslock-system-design.md  2026-06-14-rtc-service-design.md
main/: CMakeLists.txt  blink_example_main.c  button_service.c  button_service.h  buzzer_service.c  buzzer_service.h  config_mgr.c  config_mgr.h  dns_server.c  dns_server.h  i2c_manager.c  i2c_manager.h  idf_component.yml  main.c  network_service.c  network_service.h  oled_service.c  oled_service.h  pomodoro_engine.c  pomodoro_engine.h  rgb_service.c  rgb_service.h  rtc_service.c  rtc_service.h  shortcut_parser.c  shortcut_parser.h  test_shortcut_parser.c  usb_hid_service.c  usb_hid_service.h  web_server.c  web_server.h  web_ui.html
