cmake_minimum_required(VERSION 3.16)

set(U8G2_INCLUDE_DIRS
	"include"
)

set(U8G2_PRIV_INCLUDE_DIRS
	"src/core"
	"src/driver"
)

file(GLOB U8G2_CORE_SOURCES
	"src/core/*.c"
)

file(GLOB U8G2_DRIVER_COMMON_SOURCES
	"src/driver/u8g2_d_*.c"
)

set(U8G2_DRIVER_SOURCES
	${U8G2_DRIVER_COMMON_SOURCES}
)

function(u8g2_append_driver_family FAMILY)
	file(GLOB U8G2_FAMILY_DRIVER_SOURCES
		"src/driver/u8x8_d_${FAMILY}*.c"
	)
	list(APPEND U8G2_DRIVER_SOURCES ${U8G2_FAMILY_DRIVER_SOURCES})
	set(U8G2_DRIVER_SOURCES "${U8G2_DRIVER_SOURCES}" PARENT_SCOPE)
endfunction()

if(NOT DEFINED ESP_PLATFORM OR CONFIG_U8G2_DISPLAY_DRIVER_ALL)
	file(GLOB U8G2_ALL_FAMILY_DRIVER_SOURCES
		"src/driver/u8x8_d_*.c"
	)
	list(APPEND U8G2_DRIVER_SOURCES ${U8G2_ALL_FAMILY_DRIVER_SOURCES})
elseif(CONFIG_U8G2_DISPLAY_DRIVER_A2PRINTER)
	u8g2_append_driver_family(a2printer)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_CH1120)
	u8g2_append_driver_family(ch1120)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_GP1247AI)
	u8g2_append_driver_family(gp1247ai)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_GP1287AI)
	u8g2_append_driver_family(gp1287ai)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_GP1294AI)
	u8g2_append_driver_family(gp1294ai)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_GU800)
	u8g2_append_driver_family(gu800)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_HD44102)
	u8g2_append_driver_family(hd44102)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_IL3820)
	u8g2_append_driver_family(il3820)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_IST3020)
	u8g2_append_driver_family(ist3020)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_IST3088)
	u8g2_append_driver_family(ist3088)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_IST7920)
	u8g2_append_driver_family(ist7920)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_KS0108)
	u8g2_append_driver_family(ks0108)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_LC7981)
	u8g2_append_driver_family(lc7981)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_LD7032)
	u8g2_append_driver_family(ld7032)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_LS013B7DH03)
	u8g2_append_driver_family(ls013b7dh03)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_MAX7219)
	u8g2_append_driver_family(max7219)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_PCD8544)
	u8g2_append_driver_family(pcd8544)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_PCF8812)
	u8g2_append_driver_family(pcf8812)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_PCF8814)
	u8g2_append_driver_family(pcf8814)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_S1D15300)
	u8g2_append_driver_family(s1d15300)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_S1D15721)
	u8g2_append_driver_family(s1d15721)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_S1D15E06)
	u8g2_append_driver_family(s1d15e06)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SBN1661)
	u8g2_append_driver_family(sbn1661)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SED1330)
	u8g2_append_driver_family(sed1330)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SH1106)
	u8g2_append_driver_family(sh1106)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SH1107)
	u8g2_append_driver_family(sh1107)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SH1108)
	u8g2_append_driver_family(sh1108)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SH1122)
	u8g2_append_driver_family(sh1122)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1305)
	u8g2_append_driver_family(ssd1305)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1306)
	u8g2_append_driver_family(ssd1306)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1309)
	u8g2_append_driver_family(ssd1309)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1312)
	u8g2_append_driver_family(ssd1312)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1315)
	u8g2_append_driver_family(ssd1315)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1316)
	u8g2_append_driver_family(ssd1316)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1317)
	u8g2_append_driver_family(ssd1317)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1318)
	u8g2_append_driver_family(ssd1318)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1320)
	u8g2_append_driver_family(ssd1320)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1322)
	u8g2_append_driver_family(ssd1322)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1325)
	u8g2_append_driver_family(ssd1325)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1326)
	u8g2_append_driver_family(ssd1326)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1327)
	u8g2_append_driver_family(ssd1327)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1329)
	u8g2_append_driver_family(ssd1329)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1362)
	u8g2_append_driver_family(ssd1362)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1363)
	u8g2_append_driver_family(ssd1363)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1606)
	u8g2_append_driver_family(ssd1606)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_SSD1607)
	u8g2_append_driver_family(ssd1607)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7302)
	u8g2_append_driver_family(st7302)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7305)
	u8g2_append_driver_family(st7305)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7511)
	u8g2_append_driver_family(st7511)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST75160)
	u8g2_append_driver_family(st75160)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST75161)
	u8g2_append_driver_family(st75161)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST75256)
	u8g2_append_driver_family(st75256)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7528)
	u8g2_append_driver_family(st7528)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST75320)
	u8g2_append_driver_family(st75320)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7539)
	u8g2_append_driver_family(st7539)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7565)
	u8g2_append_driver_family(st7565)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7567)
	u8g2_append_driver_family(st7567)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7571)
	u8g2_append_driver_family(st7571)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7586S)
	u8g2_append_driver_family(st7586s)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7588)
	u8g2_append_driver_family(st7588)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_ST7920)
	u8g2_append_driver_family(st7920)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_STDIO)
	u8g2_append_driver_family(stdio)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_T6963)
	u8g2_append_driver_family(t6963)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1601)
	u8g2_append_driver_family(uc1601)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1604)
	u8g2_append_driver_family(uc1604)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1608)
	u8g2_append_driver_family(uc1608)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1609)
	u8g2_append_driver_family(uc1609)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1610)
	u8g2_append_driver_family(uc1610)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1611)
	u8g2_append_driver_family(uc1611)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1617)
	u8g2_append_driver_family(uc1617)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1628)
	u8g2_append_driver_family(uc1628)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1638)
	u8g2_append_driver_family(uc1638)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1698)
	u8g2_append_driver_family(uc1698)
elseif(CONFIG_U8G2_DISPLAY_DRIVER_UC1701)
	u8g2_append_driver_family(uc1701)
else()
	file(GLOB U8G2_ALL_FAMILY_DRIVER_SOURCES
		"src/driver/u8x8_d_*.c"
	)
	list(APPEND U8G2_DRIVER_SOURCES ${U8G2_ALL_FAMILY_DRIVER_SOURCES})
endif()

list(REMOVE_DUPLICATES U8G2_DRIVER_SOURCES)

set(U8G2_SOURCES
	${U8G2_CORE_SOURCES}
	${U8G2_DRIVER_SOURCES}
)

# 可选 MUI 源目录（兼容 src/mui 与 src/mnui）
if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/src/mui")
	file(GLOB U8G2_MUI_SOURCES "src/mui/*.c")
	list(APPEND U8G2_SOURCES ${U8G2_MUI_SOURCES})
	list(APPEND U8G2_PRIV_INCLUDE_DIRS "src/mui")
elseif(EXISTS "${CMAKE_CURRENT_LIST_DIR}/src/mnui")
	file(GLOB U8G2_MUI_SOURCES "src/mnui/*.c")
	list(APPEND U8G2_SOURCES ${U8G2_MUI_SOURCES})
	list(APPEND U8G2_PRIV_INCLUDE_DIRS "src/mnui")
endif()

# 可选端口层（若目录存在源文件则自动编入）
if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/src/port")
	file(GLOB U8G2_PORT_SOURCES
		"src/port/*.c"
	)
	list(APPEND U8G2_SOURCES ${U8G2_PORT_SOURCES})
	list(APPEND U8G2_PRIV_INCLUDE_DIRS "src/port")
endif()

if(DEFINED ESP_PLATFORM AND COMMAND idf_component_register)
	idf_component_register(
		SRCS ${U8G2_SOURCES}
		INCLUDE_DIRS ${U8G2_INCLUDE_DIRS}
		PRIV_INCLUDE_DIRS ${U8G2_PRIV_INCLUDE_DIRS}
		REQUIRES driver esp_driver_i2c esp_driver_spi esp_driver_gpio
		)
else()
	add_library(u8g2 STATIC ${U8G2_SOURCES})
	target_include_directories(u8g2
		PUBLIC ${U8G2_INCLUDE_DIRS}
		PRIVATE ${U8G2_PRIV_INCLUDE_DIRS}
	)
endif()
